# 3FS

./: .gitmodules  CLAUDE.md  CMakeLists.txt  Cargo.toml
docs/: chunk_id_construction.md
notes/: 4mb-write-data-path-flow.md  chain-target-node-mapping.md  chunk-size-stripe-size-calculation.md  createfile-fuse-operation-flow.md  custom-kv-integration-complete.md  custom-kv-integration-guide.md  custom-transactional-kv-server-requirements.md  distributor-decentralized-assignment.md  high-performance-thrift-transactional-service.md  kv-table-structures.md  meta-client-server-serialization.md  permissions.md
src/client/: CLAUDE.md
src/common/: CLAUDE.md
src/core/: CLAUDE.md
src/fbs/: CLAUDE.md
src/fdb/: CLAUDE.md  CMakeLists.txt  CustomKvEngine.cc  CustomKvEngine.h  CustomTransaction.cc  CustomTransaction.h  HybridKvEngine.cc  HybridKvEngine.h  HybridKvEngineConfig.h
src/fuse/: CLAUDE.md
src/lib/: CLAUDE.md
src/meta/: CLAUDE.md
testing_configs/: README.md  cleanup_cluster.sh  config_chain.sh  gen_chain_configs.sh  gen_configs.sh  hf3fs_fuse_main.service  hf3fs_fuse_main.toml  hf3fs_fuse_main_app.toml  hf3fs_fuse_main_launcher.toml  launch_cluster.sh  meta_main.toml  meta_main_app.toml  meta_main_launcher.toml  mgmtd_main.toml  mgmtd_main_app.toml  mgmtd_main_launcher.toml  minimal_admin_cli.toml  minimal_meta_app_config.toml  minimal_meta_launcher_config.toml  minimal_meta_server_config.toml  notes.md  storage_README.md  storage_main.toml  storage_main_app.toml  storage_main_launcher.toml  transactional_kv_adapter_design.md  update_ip_configs.sh
(+16 files in other folders)
